<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    android:paddingTop="30dp"
    >



    <ImageView
        android:id="@+id/iv_green_flag"
        android:contentDescription="@string/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag"
        />

    <TextView
        android:id="@+id/tv_title_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_sans_500"
        android:paddingStart="51dp"
        android:paddingEnd="51dp"
        android:text="@string/descrip_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cl_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_green_flag" />


    <ImageButton
        android:id="@+id/ib_create_account"
        android:contentDescription="@string/btn_make_account"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/gradient_button_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_btn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_words_main"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/ib_create_account"
        app:layout_constraintEnd_toEndOf="@id/ib_create_account"
        app:layout_constraintStart_toStartOf="@id/ib_create_account"
        app:layout_constraintTop_toTopOf="@id/ib_create_account"
        tools:ignore="SpUsage" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/ib_create_account"
        app:layout_constraintEnd_toEndOf="@id/iv_green_flag"
        app:layout_constraintStart_toStartOf="@id/iv_green_flag"
        app:layout_constraintTop_toBottomOf="@id/tv_title_list">

        <TextView
            android:id="@+id/tv_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/museo_sans_300"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/lst_item1"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_item2"
            app:layout_constraintStart_toEndOf="@id/iv_tick1"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_sans_300"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/lst_item2"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_item3"
            app:layout_constraintStart_toEndOf="@id/iv_tick2"
            app:layout_constraintTop_toBottomOf="@id/tv_item1" />

        <TextView
            android:id="@+id/tv_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/lst_item3"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_tick3"
            app:layout_constraintTop_toBottomOf="@id/tv_item2" />

        <ImageView
            android:id="@+id/iv_tick1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tick"
            app:layout_constraintBottom_toBottomOf="@id/tv_item1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_item1"
            app:srcCompat="@drawable/tick" />

        <ImageView
            android:id="@+id/iv_tick2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tick"
            app:layout_constraintBottom_toBottomOf="@id/tv_item2"
            app:layout_constraintStart_toStartOf="@id/iv_tick1"
            app:layout_constraintTop_toBottomOf="@id/iv_tick1"
            app:layout_constraintTop_toTopOf="@id/tv_item2"
            app:srcCompat="@drawable/tick" />

        <ImageView
            android:id="@+id/iv_tick3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tick"
            app:layout_constraintBottom_toBottomOf="@id/tv_item3"
            app:layout_constraintStart_toStartOf="@id/iv_tick1"
            app:layout_constraintTop_toBottomOf="@id/iv_tick2"
            app:layout_constraintTop_toTopOf="@id/tv_item3"
            app:srcCompat="@drawable/tick" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--        tools:layout_editor_absoluteX="169dp"-->
<!--        tools:layout_editor_absoluteY="137dp" />-->
</androidx.constraintlayout.widget.ConstraintLayout>