<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/et_email"
        android:autofillHints="Put Email here"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/museo_sans_300"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_password_first"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:ems="10"
        android:fontFamily="@font/museo_sans_300"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="Put Password here"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/et_password_check"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/museo_sans_300"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="Repeat Password here"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:fontFamily="@font/museo_sans_300"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:paddingTop="10dp"
        android:fontFamily="@font/museo_sans_300"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/use_another" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeat_password"
        android:fontFamily="@font/museo_sans_300"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_first" />

    <ImageButton
        android:id="@+id/iv_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="@string/back_button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:fontFamily="@font/museo_sans_500"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back_button" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/bottom_descrip"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_check" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:srcCompat="@drawable/gradient_button_background"
        android:contentDescription="@string/next_button" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="40dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="@id/btnNext"
        app:layout_constraintTop_toTopOf="@id/btnNext"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/iv_tick6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/et_password_check"
        app:layout_constraintEnd_toEndOf="@+id/et_password_check"
        app:layout_constraintTop_toTopOf="@+id/et_password_check"
        app:srcCompat="@drawable/tick"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_tick5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/et_password_first"
        app:layout_constraintEnd_toEndOf="@+id/et_password_first"
        app:layout_constraintTop_toTopOf="@+id/et_password_first"
        app:srcCompat="@drawable/tick"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_tick4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="@id/et_email"
        app:layout_constraintTop_toTopOf="@id/et_email"
        app:srcCompat="@drawable/tick"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_ewarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_warn_border"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/invalid_email"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <TextView
        android:id="@+id/use_another"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_warn_border"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/account_exists"
        app:layout_constraintTop_toBottomOf="@id/tv_ewarning"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bad_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_warn_border"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/enter_pass_warn"
        app:layout_constraintTop_toBottomOf="@id/et_password_check"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView6"/>

    <TextView
        android:id="@+id/repeat_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_warn_border"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:fontFamily="@font/museo_sans_300"
        android:text="@string/pass_no_match"
        app:layout_constraintTop_toBottomOf="@id/bad_pass"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView6"/>

    <ImageView
        android:id="@+id/x_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cross"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/tv_ewarning"
        app:layout_constraintStart_toStartOf="@id/tv_ewarning"
        app:layout_constraintBottom_toBottomOf="@id/tv_ewarning"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/x_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cross"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/use_another"
        app:layout_constraintBottom_toBottomOf="@id/use_another"
        app:layout_constraintStart_toStartOf="@id/use_another"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/x_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cross"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/bad_pass"
        app:layout_constraintStart_toStartOf="@id/bad_pass"
        app:layout_constraintBottom_toBottomOf="@id/bad_pass"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/x_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/cross"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/repeat_pass"
        app:layout_constraintBottom_toBottomOf="@id/repeat_pass"
        app:layout_constraintStart_toStartOf="@id/repeat_pass"
        android:visibility="gone"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>